# home-energy-savings-backend-framework

./: Dockerfile  pyproject.toml  run.sh  start.sh
hesaving/: main.py  nginix.conf
